[package]
name = "radnelac"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
itoa = { version = "1.0", optional = true }
convert_case = { version = "0.8", optional = true }
numerals = { version = "0.1", optional = true }

[features] 
default = ["display"]
display = ["dep:itoa", "dep:convert_case", "dep:numerals"]

[dev-dependencies]
proptest = "1.6.0"