# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "radnelac"
version = "0.0.2"
edition = "2024"
description = "Calculations in a variety of different timekeeping systems."
license = "MPL-2.0"
homepage = "https://radnelac.org/"
repository = "https://fossil.radnelac.org/radnelac"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
itoa = { version = "1.0", optional = true }
convert_case = { version = "0.8", optional = true, default-features = false }
numerals = { version = "0.1", optional = true }

[features] 
default = ["display"]
display = ["dep:itoa", "dep:convert_case", "dep:numerals"]

[dev-dependencies]
proptest = "1.6.0"